cmake_minimum_required(VERSION 3.27)
project(Socket_Programming LANGUAGES C CXX)

add_executable(server_tcp server_tcp.cpp)
add_executable(server_udp server_udp.cpp)
add_executable(client_tcp client_tcp.cpp)
add_executable(client_udp client_udp.cpp)
add_executable(sender_dll DLL_Sender.cpp)
add_executable(receiver_dll DLL_Receiver.cpp)
add_executable(stop_n_wait_send Stop_N_Wait_Send.cpp)
add_executable(stop_n_wait_recv Stop_N_Wait_Recv.cpp)


set_property(TARGET server_tcp PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET server_udp PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET client_tcp PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET client_udp PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET sender_dll PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET receiver_dll PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET stop_n_wait_send PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
set_property(TARGET stop_n_wait_recv PROPERTY C_STANDARD 11 C_STANDARD_REQUIRED ON CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
